// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`rule heading-level should contain documentation (with minInitialRank) 1`] = `
{
  "description": "Headings should start at <h1> and can only increase one level at a time.
The headings should form a table of contents and make sense on its own.

Under the current configuration only a single <h1> can be present at a time in the document.",
  "url": "https://html-validate.org/rules/heading-level.html",
}
`;

exports[`rule heading-level should contain documentation (with multiple h1) 1`] = `
{
  "description": "Headings must start at <h1> and can only increase one level at a time.
The headings should form a table of contents and make sense on its own.",
  "url": "https://html-validate.org/rules/heading-level.html",
}
`;

exports[`rule heading-level should contain documentation (without multiple h1) 1`] = `
{
  "description": "Headings must start at <h1> and can only increase one level at a time.
The headings should form a table of contents and make sense on its own.

Under the current configuration only a single <h1> can be present at a time in the document.",
  "url": "https://html-validate.org/rules/heading-level.html",
}
`;
